--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "abhikart",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:8000",
+  "proxy":"https://abhikart-backend-lga8.onrender.com",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
